Bug 1068979 - Handle surrogate pair if necessary when backspacing into a text node. r=ehsan